Bug 404668 - some Default color schemes break the coloring e.g. panel goes black with window touching
Summary: some Default color schemes break the coloring e.g. panel goes black with wind...
Status: RESOLVED FIXED
Alias: None
Product: lattedock
Classification: Unmaintained
Component: application (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Michail Vourlakos
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-21 23:55 UTC by Tyler Brown
Modified: 2019-02-22 14:44 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Panel is showing as completely black. (3.37 MB, image/png)
2019-02-21 23:55 UTC, Tyler Brown
Details
My Latte Appearance Settings (90.71 KB, image/png)
2019-02-22 08:46 UTC, Tyler Brown
Details
My Normal Panel (2.19 MB, image/png)
2019-02-22 08:47 UTC, Tyler Brown
Details
Example Colors File (2.67 KB, text/plain)
2019-02-22 08:49 UTC, Tyler Brown
Details
My Latte Layout (48.81 KB, text/plain)
2019-02-22 08:56 UTC, Tyler Brown
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Tyler Brown 2019-02-21 23:55:38 UTC
Created attachment 118264 [details]
Panel is showing as completely black.

SUMMARY
On the latest git version of Latte Dock, utilizing the Colors from Application feature causes the panel to go black. I do have the Latte Window Colors Kwin script installed. 

I am currently on Kubuntu 18.10 running Plasma 5.15.1 from the backports PPA. 

STEPS TO REPRODUCE
1. Go into the Panel Settings
2. Go into Appearance
3. Select "Active" in the "From Window" setting. 

OBSERVED RESULT
The panel goes black.

EXPECTED RESULT
The panel should be following the titlebar color of the active window.

SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: Kubuntu 18.10, Kernel 4.18.0-15-generic
KDE Plasma Version: Plasma 5.15.1
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.1

ADDITIONAL INFORMATION
Comment 1 Michail Vourlakos 2019-02-22 04:19:10 UTC
1. I need a screenshot of you appearance settings
2. A screenshot how the panel looks normally
3. The color scheme file used at that window

Do I see correctly that Window Buttons are drawn correctly?
Comment 2 Tyler Brown 2019-02-22 08:46:13 UTC
Created attachment 118275 [details]
My Latte Appearance Settings
Comment 3 Tyler Brown 2019-02-22 08:47:12 UTC
Created attachment 118276 [details]
My Normal Panel

This is what my top panel looks like normally with "Colors From Window" set to None.
Comment 4 Tyler Brown 2019-02-22 08:49:22 UTC
Created attachment 118277 [details]
Example Colors File

Here is an example color scheme file, this is Adapta modified slightly to match the color scheme of Discord's window. Although this happens with any color scheme, including the regular Adapta.
Comment 5 Michail Vourlakos 2019-02-22 08:52:45 UTC
please send me also your layout file in order to load it in my system and try afterwards to reproduce. Your appearance settings look just fine
Comment 6 Tyler Brown 2019-02-22 08:56:37 UTC
Created attachment 118278 [details]
My Latte Layout

Here is my Latte Layout File.
Comment 7 Michail Vourlakos 2019-02-22 14:24:51 UTC
funny thing, this is happening only if the color scheme is set as default, if you explicit;y set it at a window and use other color scheme as default. It works afterwards just fine.

Ok I think I can fix this...
Comment 8 Michail Vourlakos 2019-02-22 14:44:42 UTC
Git commit 8a0c0740b3491a1777d5cdcf494ac1ed5c0dbe89 by Michail Vourlakos.
Committed on 22/02/2019 at 14:43.
Pushed by mvourlakos into branch 'master'.

improve how default scheme file is identified

--add also some improvements for color schemes

M  +10   -5    app/schemecolors.cpp
M  +2    -1    app/wm/abstractwindowinterface.cpp

https://commits.kde.org/latte-dock/8a0c0740b3491a1777d5cdcf494ac1ed5c0dbe89