improve how default scheme file is identified

--add also some improvements for color schemes

BUG: 404668